@@ -26,7 +26,6 @@ import org.elasticsearch.xpack.core.template.resources.TemplateResources;
 import java.io.IOException;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * A utility class used for index lifecycle policies
@@ -120,7 +119,7 @@ public class LifecyclePolicyUtils {
             .stream()
             .filter(indexMetadata -> policyName.equals(indexMetadata.getLifecyclePolicyName()))
             .map(indexMetadata -> indexMetadata.getIndex().getName())
-            .collect(Collectors.toList());
+            .toList();
 
         final List<String> allDataStreams = indexNameExpressionResolver.dataStreamNames(
             project,
@@ -135,12 +134,12 @@ public class LifecyclePolicyUtils {
             } else {
                 return false;
             }
-        }).collect(Collectors.toList());
+        }).toList();
 
         final List<String> composableTemplates = project.templatesV2().keySet().stream().filter(templateName -> {
             Settings settings = MetadataIndexTemplateService.resolveSettings(project, templateName);
             return policyName.equals(LifecycleSettings.LIFECYCLE_NAME_SETTING.get(settings));
-        }).collect(Collectors.toList());
+        }).toList();
 
         return new ItemUsage(indices, dataStreams, composableTemplates);
     }
